src/compilador/parser/y.output
   0  $accept : programa $end

   1  programa : identificador_simple BEGIN sentencias END
   2           | identificador_simple BEGIN sentencias END error
   3           | identificador_simple error BEGIN sentencias END
   4           | BEGIN sentencias END
   5           | identificador_simple sentencias END
   6           | identificador_simple BEGIN sentencias
   7           | identificador_simple sentencias
   8           | identificador_simple BEGIN sentencias error END
   9           | identificador_simple BEGIN error END
  10           | identificador_simple BEGIN sentencias error
  11           | identificador_simple BEGIN error
  12           | identificador_simple sentencias BEGIN sentencias END

  13  sentencias : sentencias sentencia
  14             | sentencia

  15  sentencia : sentencia_declarativa
  16            | sentencia_ejecutable
  17            | error PUNTO_Y_COMA

  18  sentencia_declarativa : tipo lista_de_identificadores PUNTO_Y_COMA
  19                        | tipo lista_de_identificadores error PUNTO_Y_COMA
  20                        | tipo lista_de_identificadores error END
  21                        | funcion
  22                        | struct

  23  struct : TYPEDEF STRUCT MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA
  24         | TYPEDEF MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA
  25         | TYPEDEF STRUCT MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO error PUNTO_Y_COMA
  26         | TYPEDEF STRUCT MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO error END
  27         | TYPEDEF STRUCT lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA
  28         | TYPEDEF MENOR STRUCT lista_de_tipos CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA
  29         | TYPEDEF MENOR STRUCT lista_de_tipos CORCHETE_L lista_de_identificadores CORCHETE_R PUNTO_Y_COMA

  30  tipo : ULONGINT
  31       | SINGLE
  32       | IDENTIFICADOR_TIPO

  33  lista_de_tipos : lista_de_tipos COMA tipo
  34                 | tipo

  35  lista_de_identificadores : lista_de_identificadores COMA identificador
  36                           | lista_de_identificadores identificador
  37                           | identificador

  38  identificador : identificador_simple
  39                | identificador_compuesto

  40  identificador_simple : IDENTIFICADOR_GENERICO
  41                       | IDENTIFICADOR_ULONGINT
  42                       | IDENTIFICADOR_SINGLE

  43  identificador_compuesto : identificador_simple PUNTO identificador_compuesto
  44                          | identificador_simple PUNTO identificador_simple

  45  funcion : encabezado_funcion BEGIN cuerpo_funcion END

  46  encabezado_funcion : tipo FUN IDENTIFICADOR_GENERICO PARENTESIS_L parametro PARENTESIS_R
  47                     | tipo FUN PARENTESIS_L parametro PARENTESIS_R

  48  parametro : tipo identificador
  49            | identificador
  50            | tipo
  51            | tipo identificador error
  52            | error

  53  cuerpo_funcion : cuerpo_funcion sentencia_ejecutable_en_funcion
  54                 | cuerpo_funcion sentencia_declarativa
  55                 | sentencia_ejecutable_en_funcion
  56                 | sentencia_declarativa

  57  sentencia_ejecutable_en_funcion : sentencia_asignacion PUNTO_Y_COMA
  58                                  | sentencia_asignacion error PUNTO_Y_COMA
  59                                  | sentencia_asignacion error END
  60                                  | sentencia_seleccion_en_funcion
  61                                  | sentencia_salida
  62                                  | sentencia_control_en_funcion
  63                                  | sentencia_retorno

  64  sentencia_control_en_funcion : encabezado_for bloque_de_sent_ejecutables_en_funcion
  65                               | encabezado_for error

  66  sentencia_retorno : RET PARENTESIS_L expresion PARENTESIS_R PUNTO_Y_COMA
  67                    | RET PARENTESIS_L expresion PARENTESIS_R error PUNTO_Y_COMA
  68                    | RET PARENTESIS_L expresion PARENTESIS_R error END

  69  sentencia_seleccion_en_funcion : IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if_en_funcion END_IF PUNTO_Y_COMA
  70                                 | IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if_en_funcion END_IF error PUNTO_Y_COMA
  71                                 | IF PARENTESIS_L condicion PARENTESIS_R cuerpo_if_en_funcion END_IF PUNTO_Y_COMA
  72                                 | IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if_en_funcion END_IF error END
  73                                 | IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if_en_funcion PUNTO_Y_COMA
  74                                 | IF PARENTESIS_L condicion THEN cuerpo_if_en_funcion END_IF PUNTO_Y_COMA
  75                                 | IF condicion PARENTESIS_R THEN cuerpo_if_en_funcion END_IF PUNTO_Y_COMA
  76                                 | IF condicion THEN cuerpo_if_en_funcion END_IF PUNTO_Y_COMA
  77                                 | IF PARENTESIS_L condicion PARENTESIS_R THEN END_IF PUNTO_Y_COMA

  78  cuerpo_if_en_funcion : bloque_de_sent_ejecutables_en_funcion bloque_else_en_funcion
  79                       | bloque_de_sent_ejecutables_en_funcion

  80  bloque_else_en_funcion : ELSE bloque_de_sent_ejecutables_en_funcion
  81                         | ELSE

  82  bloque_de_sent_ejecutables_en_funcion : BEGIN sentencias_ejecutable_en_funcion END PUNTO_Y_COMA
  83                                        | BEGIN sentencias_ejecutable_en_funcion END error PUNTO_Y_COMA
  84                                        | BEGIN sentencias_ejecutable_en_funcion END error END
  85                                        | sentencia_ejecutable_en_funcion

  86  sentencias_ejecutable_en_funcion : sentencias_ejecutable_en_funcion sentencia_ejecutable_en_funcion
  87                                   | sentencia_ejecutable_en_funcion

  88  sentencia_ejecutable : sentencia_asignacion PUNTO_Y_COMA
  89                       | sentencia_asignacion error PUNTO_Y_COMA
  90                       | sentencia_asignacion error END
  91                       | sentencia_seleccion
  92                       | sentencia_salida
  93                       | sentencia_control

  94  sentencia_asignacion : lista_de_identificadores ASIGNACION lista_de_expresiones

  95  sentencia_seleccion : IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if END_IF PUNTO_Y_COMA
  96                      | IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if END_IF error PUNTO_Y_COMA
  97                      | IF PARENTESIS_L condicion PARENTESIS_R cuerpo_if END_IF PUNTO_Y_COMA
  98                      | IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if END_IF error END
  99                      | IF PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if PUNTO_Y_COMA
 100                      | IF PARENTESIS_L condicion THEN cuerpo_if END_IF PUNTO_Y_COMA
 101                      | IF condicion PARENTESIS_R THEN cuerpo_if END_IF PUNTO_Y_COMA
 102                      | IF condicion THEN cuerpo_if END_IF PUNTO_Y_COMA
 103                      | IF PARENTESIS_L condicion PARENTESIS_R THEN END_IF PUNTO_Y_COMA

 104  cuerpo_if : bloque_de_sent_ejecutables bloque_else
 105            | bloque_de_sent_ejecutables

 106  bloque_else : ELSE bloque_de_sent_ejecutables
 107              | ELSE

 108  condicion : expresion comparador expresion
 109            | error

 110  comparador : MAYOR
 111             | MENOR
 112             | MAYOR_O_IGUAL
 113             | MENOR_O_IGUAL
 114             | IGUAL
 115             | DESIGUAL

 116  bloque_de_sent_ejecutables : BEGIN sentencias_ejecutables END PUNTO_Y_COMA
 117                             | BEGIN sentencias_ejecutables END error PUNTO_Y_COMA
 118                             | BEGIN END PUNTO_Y_COMA
 119                             | BEGIN sentencias_ejecutables END error END
 120                             | sentencia_ejecutable

 121  sentencias_ejecutables : sentencias_ejecutables sentencia_ejecutable
 122                         | sentencia_ejecutable

 123  sentencia_salida : OUTF PARENTESIS_L INLINE_STRING PARENTESIS_R PUNTO_Y_COMA
 124                   | OUTF PARENTESIS_L expresion PARENTESIS_R PUNTO_Y_COMA
 125                   | OUTF PARENTESIS_L INLINE_STRING PARENTESIS_R error PUNTO_Y_COMA
 126                   | OUTF PARENTESIS_L expresion PARENTESIS_R error PUNTO_Y_COMA
 127                   | OUTF PARENTESIS_L INLINE_STRING PARENTESIS_R error END
 128                   | OUTF PARENTESIS_L expresion PARENTESIS_R error END
 129                   | OUTF PARENTESIS_L PARENTESIS_R PUNTO_Y_COMA
 130                   | OUTF PARENTESIS_L error PUNTO_Y_COMA

 131  sentencia_control : encabezado_for bloque_de_sent_ejecutables
 132                    | encabezado_for error

 133  encabezado_for : encabezado_for_obligatorio PUNTO_Y_COMA PARENTESIS_L condicion PARENTESIS_R PARENTESIS_R
 134                 | encabezado_for_obligatorio PARENTESIS_R
 135                 | encabezado_for_obligatorio
 136                 | encabezado_for_obligatorio PUNTO_Y_COMA PARENTESIS_L condicion PARENTESIS_R
 137                 | encabezado_for_obligatorio PARENTESIS_L condicion PARENTESIS_R PARENTESIS_R
 138                 | encabezado_for_obligatorio PUNTO_Y_COMA condicion PARENTESIS_R PARENTESIS_R
 139                 | encabezado_for_obligatorio PUNTO_Y_COMA PARENTESIS_L condicion

 140  encabezado_for_obligatorio : FOR PARENTESIS_L asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA accion
 141                             | FOR asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA accion
 142                             | FOR PARENTESIS_L asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA
 143                             | FOR PARENTESIS_L asignacion_enteros condicion PUNTO_Y_COMA accion
 144                             | FOR PARENTESIS_L asignacion_enteros PUNTO_Y_COMA condicion accion

 145  asignacion_enteros : identificador ASIGNACION CONSTANTE_DECIMAL
 146                     | identificador ASIGNACION CONSTANTE_OCTAL

 147  accion : UP CONSTANTE_DECIMAL
 148         | UP CONSTANTE_OCTAL
 149         | DOWN CONSTANTE_OCTAL
 150         | DOWN CONSTANTE_DECIMAL
 151         | CONSTANTE_OCTAL
 152         | CONSTANTE_DECIMAL

 153  lista_de_expresiones : lista_de_expresiones COMA expresion
 154                       | expresion

 155  expresion : TOS PARENTESIS_L expresion_aritmetica PARENTESIS_R
 156            | TOS PARENTESIS_L PARENTESIS_R
 157            | expresion_aritmetica

 158  expresion_aritmetica : expresion_aritmetica SUMA termino
 159                       | expresion_aritmetica RESTA termino
 160                       | termino
 161                       | error

 162  termino : termino MULTIPLICACION factor
 163          | termino DIVISION factor
 164          | factor

 165  factor : identificador
 166         | constante
 167         | RESTA constante
 168         | invocacion_a_funcion

 169  constante : CONSTANTE_DECIMAL
 170            | CONSTANTE_OCTAL
 171            | CONSTANTE_SINGLE

 172  invocacion_a_funcion : IDENTIFICADOR_FUN PARENTESIS_L expresion PARENTESIS_R
 173                       | IDENTIFICADOR_FUN PARENTESIS_L PARENTESIS_R
 174                       | IDENTIFICADOR_FUN PARENTESIS_L expresion error PARENTESIS_R

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	BEGIN  shift 4
	.  error

	programa  goto 5
	identificador_simple  goto 6


state 1
	identificador_simple : IDENTIFICADOR_GENERICO .  (40)

	.  reduce 40


state 2
	identificador_simple : IDENTIFICADOR_ULONGINT .  (41)

	.  reduce 41


state 3
	identificador_simple : IDENTIFICADOR_SINGLE .  (42)

	.  reduce 42


state 4
	programa : BEGIN . sentencias END  (4)

	error  shift 7
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_TIPO  shift 8
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FOR  shift 9
	SINGLE  shift 10
	ULONGINT  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	.  error

	identificador_simple  goto 15
	sentencias  goto 16
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	tipo  goto 20
	lista_de_identificadores  goto 21
	funcion  goto 22
	struct  goto 23
	identificador  goto 24
	identificador_compuesto  goto 25
	encabezado_funcion  goto 26
	sentencia_asignacion  goto 27
	sentencia_salida  goto 28
	encabezado_for  goto 29
	sentencia_seleccion  goto 30
	sentencia_control  goto 31
	encabezado_for_obligatorio  goto 32


state 5
	$accept : programa . $end  (0)

	$end  accept


state 6
	programa : identificador_simple . BEGIN sentencias END  (1)
	programa : identificador_simple . BEGIN sentencias END error  (2)
	programa : identificador_simple . error BEGIN sentencias END  (3)
	programa : identificador_simple . sentencias END  (5)
	programa : identificador_simple . BEGIN sentencias  (6)
	programa : identificador_simple . sentencias  (7)
	programa : identificador_simple . BEGIN sentencias error END  (8)
	programa : identificador_simple . BEGIN error END  (9)
	programa : identificador_simple . BEGIN sentencias error  (10)
	programa : identificador_simple . BEGIN error  (11)
	programa : identificador_simple . sentencias BEGIN sentencias END  (12)

	error  shift 33
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_TIPO  shift 8
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FOR  shift 9
	SINGLE  shift 10
	ULONGINT  shift 11
	IF  shift 12
	BEGIN  shift 34
	OUTF  shift 13
	TYPEDEF  shift 14
	.  error

	identificador_simple  goto 15
	sentencias  goto 35
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	tipo  goto 20
	lista_de_identificadores  goto 21
	funcion  goto 22
	struct  goto 23
	identificador  goto 24
	identificador_compuesto  goto 25
	encabezado_funcion  goto 26
	sentencia_asignacion  goto 27
	sentencia_salida  goto 28
	encabezado_for  goto 29
	sentencia_seleccion  goto 30
	sentencia_control  goto 31
	encabezado_for_obligatorio  goto 32


state 7
	sentencia : error . PUNTO_Y_COMA  (17)

	PUNTO_Y_COMA  shift 36
	.  error


state 8
	tipo : IDENTIFICADOR_TIPO .  (32)

	.  reduce 32


state 9
	encabezado_for_obligatorio : FOR . PARENTESIS_L asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA accion  (140)
	encabezado_for_obligatorio : FOR . asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA accion  (141)
	encabezado_for_obligatorio : FOR . PARENTESIS_L asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA  (142)
	encabezado_for_obligatorio : FOR . PARENTESIS_L asignacion_enteros condicion PUNTO_Y_COMA accion  (143)
	encabezado_for_obligatorio : FOR . PARENTESIS_L asignacion_enteros PUNTO_Y_COMA condicion accion  (144)

	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	PARENTESIS_L  shift 37
	.  error

	identificador_simple  goto 15
	identificador  goto 38
	identificador_compuesto  goto 25
	asignacion_enteros  goto 39


state 10
	tipo : SINGLE .  (31)

	.  reduce 31


state 11
	tipo : ULONGINT .  (30)

	.  reduce 30


state 12
	sentencia_seleccion : IF . PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if END_IF PUNTO_Y_COMA  (95)
	sentencia_seleccion : IF . PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if END_IF error PUNTO_Y_COMA  (96)
	sentencia_seleccion : IF . PARENTESIS_L condicion PARENTESIS_R cuerpo_if END_IF PUNTO_Y_COMA  (97)
	sentencia_seleccion : IF . PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if END_IF error END  (98)
	sentencia_seleccion : IF . PARENTESIS_L condicion PARENTESIS_R THEN cuerpo_if PUNTO_Y_COMA  (99)
	sentencia_seleccion : IF . PARENTESIS_L condicion THEN cuerpo_if END_IF PUNTO_Y_COMA  (100)
	sentencia_seleccion : IF . condicion PARENTESIS_R THEN cuerpo_if END_IF PUNTO_Y_COMA  (101)
	sentencia_seleccion : IF . condicion THEN cuerpo_if END_IF PUNTO_Y_COMA  (102)
	sentencia_seleccion : IF . PARENTESIS_L condicion PARENTESIS_R THEN END_IF PUNTO_Y_COMA  (103)

	error  shift 40
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_FUN  shift 41
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	CONSTANTE_DECIMAL  shift 42
	CONSTANTE_OCTAL  shift 43
	CONSTANTE_SINGLE  shift 44
	RESTA  shift 45
	PARENTESIS_L  shift 46
	TOS  shift 47
	.  error

	identificador_simple  goto 15
	identificador  goto 48
	identificador_compuesto  goto 25
	expresion  goto 49
	condicion  goto 50
	expresion_aritmetica  goto 51
	termino  goto 52
	factor  goto 53
	constante  goto 54
	invocacion_a_funcion  goto 55


state 13
	sentencia_salida : OUTF . PARENTESIS_L INLINE_STRING PARENTESIS_R PUNTO_Y_COMA  (123)
	sentencia_salida : OUTF . PARENTESIS_L expresion PARENTESIS_R PUNTO_Y_COMA  (124)
	sentencia_salida : OUTF . PARENTESIS_L INLINE_STRING PARENTESIS_R error PUNTO_Y_COMA  (125)
	sentencia_salida : OUTF . PARENTESIS_L expresion PARENTESIS_R error PUNTO_Y_COMA  (126)
	sentencia_salida : OUTF . PARENTESIS_L INLINE_STRING PARENTESIS_R error END  (127)
	sentencia_salida : OUTF . PARENTESIS_L expresion PARENTESIS_R error END  (128)
	sentencia_salida : OUTF . PARENTESIS_L PARENTESIS_R PUNTO_Y_COMA  (129)
	sentencia_salida : OUTF . PARENTESIS_L error PUNTO_Y_COMA  (130)

	PARENTESIS_L  shift 56
	.  error


state 14
	struct : TYPEDEF . STRUCT MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA  (23)
	struct : TYPEDEF . MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA  (24)
	struct : TYPEDEF . STRUCT MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO error PUNTO_Y_COMA  (25)
	struct : TYPEDEF . STRUCT MENOR lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO error END  (26)
	struct : TYPEDEF . STRUCT lista_de_tipos MAYOR CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA  (27)
	struct : TYPEDEF . MENOR STRUCT lista_de_tipos CORCHETE_L lista_de_identificadores CORCHETE_R IDENTIFICADOR_GENERICO PUNTO_Y_COMA  (28)
	struct : TYPEDEF . MENOR STRUCT lista_de_tipos CORCHETE_L lista_de_identificadores CORCHETE_R PUNTO_Y_COMA  (29)

	MENOR  shift 57
	STRUCT  shift 58
	.  error


state 15
	identificador : identificador_simple .  (38)
	identificador_compuesto : identificador_simple . PUNTO identificador_compuesto  (43)
	identificador_compuesto : identificador_simple . PUNTO identificador_simple  (44)

	PUNTO  shift 59
	error  reduce 38
	IDENTIFICADOR_GENERICO  reduce 38
	IDENTIFICADOR_ULONGINT  reduce 38
	IDENTIFICADOR_SINGLE  reduce 38
	CONSTANTE_DECIMAL  reduce 38
	CONSTANTE_OCTAL  reduce 38
	SUMA  reduce 38
	RESTA  reduce 38
	MULTIPLICACION  reduce 38
	DIVISION  reduce 38
	ASIGNACION  reduce 38
	MAYOR_O_IGUAL  reduce 38
	MENOR_O_IGUAL  reduce 38
	MAYOR  reduce 38
	MENOR  reduce 38
	IGUAL  reduce 38
	DESIGUAL  reduce 38
	CORCHETE_R  reduce 38
	PARENTESIS_R  reduce 38
	COMA  reduce 38
	PUNTO_Y_COMA  reduce 38
	FOR  reduce 38
	UP  reduce 38
	DOWN  reduce 38
	IF  reduce 38
	THEN  reduce 38
	BEGIN  reduce 38
	OUTF  reduce 38
	RET  reduce 38


state 16
	programa : BEGIN sentencias . END  (4)
	sentencias : sentencias . sentencia  (13)

	error  shift 7
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_TIPO  shift 8
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FOR  shift 9
	SINGLE  shift 10
	ULONGINT  shift 11
	IF  shift 12
	END  shift 60
	OUTF  shift 13
	TYPEDEF  shift 14
	.  error

	identificador_simple  goto 15
	sentencia  goto 61
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	tipo  goto 20
	lista_de_identificadores  goto 21
	funcion  goto 22
	struct  goto 23
	identificador  goto 24
	identificador_compuesto  goto 25
	encabezado_funcion  goto 26
	sentencia_asignacion  goto 27
	sentencia_salida  goto 28
	encabezado_for  goto 29
	sentencia_seleccion  goto 30
	sentencia_control  goto 31
	encabezado_for_obligatorio  goto 32


state 17
	sentencias : sentencia .  (14)

	.  reduce 14


state 18
	sentencia : sentencia_declarativa .  (15)

	.  reduce 15


state 19
	sentencia : sentencia_ejecutable .  (16)

	.  reduce 16


state 20
	sentencia_declarativa : tipo . lista_de_identificadores PUNTO_Y_COMA  (18)
	sentencia_declarativa : tipo . lista_de_identificadores error PUNTO_Y_COMA  (19)
	sentencia_declarativa : tipo . lista_de_identificadores error END  (20)
	encabezado_funcion : tipo . FUN IDENTIFICADOR_GENERICO PARENTESIS_L parametro PARENTESIS_R  (46)
	encabezado_funcion : tipo . FUN PARENTESIS_L parametro PARENTESIS_R  (47)

	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FUN  shift 62
	.  error

	identificador_simple  goto 15
	lista_de_identificadores  goto 63
	identificador  goto 24
	identificador_compuesto  goto 25


state 21
	lista_de_identificadores : lista_de_identificadores . COMA identificador  (35)
	lista_de_identificadores : lista_de_identificadores . identificador  (36)
	sentencia_asignacion : lista_de_identificadores . ASIGNACION lista_de_expresiones  (94)

	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	ASIGNACION  shift 64
	COMA  shift 65
	.  error

	identificador_simple  goto 15
	identificador  goto 66
	identificador_compuesto  goto 25


state 22
	sentencia_declarativa : funcion .  (21)

	.  reduce 21


state 23
	sentencia_declarativa : struct .  (22)

	.  reduce 22


state 24
	lista_de_identificadores : identificador .  (37)

	.  reduce 37


state 25
	identificador : identificador_compuesto .  (39)

	.  reduce 39


state 26
	funcion : encabezado_funcion . BEGIN cuerpo_funcion END  (45)

	BEGIN  shift 67
	.  error


state 27
	sentencia_ejecutable : sentencia_asignacion . PUNTO_Y_COMA  (88)
	sentencia_ejecutable : sentencia_asignacion . error PUNTO_Y_COMA  (89)
	sentencia_ejecutable : sentencia_asignacion . error END  (90)

	error  shift 68
	PUNTO_Y_COMA  shift 69
	.  error


state 28
	sentencia_ejecutable : sentencia_salida .  (92)

	.  reduce 92


state 29
	sentencia_control : encabezado_for . bloque_de_sent_ejecutables  (131)
	sentencia_control : encabezado_for . error  (132)

	error  shift 70
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FOR  shift 9
	IF  shift 12
	BEGIN  shift 71
	OUTF  shift 13
	.  error

	identificador_simple  goto 15
	sentencia_ejecutable  goto 72
	lista_de_identificadores  goto 21
	identificador  goto 24
	identificador_compuesto  goto 25
	sentencia_asignacion  goto 27
	sentencia_salida  goto 28
	encabezado_for  goto 29
	sentencia_seleccion  goto 30
	sentencia_control  goto 31
	bloque_de_sent_ejecutables  goto 73
	encabezado_for_obligatorio  goto 32


state 30
	sentencia_ejecutable : sentencia_seleccion .  (91)

	.  reduce 91


state 31
	sentencia_ejecutable : sentencia_control .  (93)

	.  reduce 93


state 32
	encabezado_for : encabezado_for_obligatorio . PUNTO_Y_COMA PARENTESIS_L condicion PARENTESIS_R PARENTESIS_R  (133)
	encabezado_for : encabezado_for_obligatorio . PARENTESIS_R  (134)
	encabezado_for : encabezado_for_obligatorio .  (135)
	encabezado_for : encabezado_for_obligatorio . PUNTO_Y_COMA PARENTESIS_L condicion PARENTESIS_R  (136)
	encabezado_for : encabezado_for_obligatorio . PARENTESIS_L condicion PARENTESIS_R PARENTESIS_R  (137)
	encabezado_for : encabezado_for_obligatorio . PUNTO_Y_COMA condicion PARENTESIS_R PARENTESIS_R  (138)
	encabezado_for : encabezado_for_obligatorio . PUNTO_Y_COMA PARENTESIS_L condicion  (139)

	PARENTESIS_L  shift 74
	PARENTESIS_R  shift 75
	PUNTO_Y_COMA  shift 76
	error  reduce 135
	IDENTIFICADOR_GENERICO  reduce 135
	IDENTIFICADOR_ULONGINT  reduce 135
	IDENTIFICADOR_SINGLE  reduce 135
	FOR  reduce 135
	IF  reduce 135
	BEGIN  reduce 135
	OUTF  reduce 135
	RET  reduce 135


state 33
	programa : identificador_simple error . BEGIN sentencias END  (3)
	sentencia : error . PUNTO_Y_COMA  (17)

	PUNTO_Y_COMA  shift 36
	BEGIN  shift 77
	.  error


state 34
	programa : identificador_simple BEGIN . sentencias END  (1)
	programa : identificador_simple BEGIN . sentencias END error  (2)
	programa : identificador_simple BEGIN . sentencias  (6)
	programa : identificador_simple BEGIN . sentencias error END  (8)
	programa : identificador_simple BEGIN . error END  (9)
	programa : identificador_simple BEGIN . sentencias error  (10)
	programa : identificador_simple BEGIN . error  (11)

	error  shift 78
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_TIPO  shift 8
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FOR  shift 9
	SINGLE  shift 10
	ULONGINT  shift 11
	IF  shift 12
	OUTF  shift 13
	TYPEDEF  shift 14
	.  error

	identificador_simple  goto 15
	sentencias  goto 79
	sentencia  goto 17
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	tipo  goto 20
	lista_de_identificadores  goto 21
	funcion  goto 22
	struct  goto 23
	identificador  goto 24
	identificador_compuesto  goto 25
	encabezado_funcion  goto 26
	sentencia_asignacion  goto 27
	sentencia_salida  goto 28
	encabezado_for  goto 29
	sentencia_seleccion  goto 30
	sentencia_control  goto 31
	encabezado_for_obligatorio  goto 32


state 35
	programa : identificador_simple sentencias . END  (5)
	programa : identificador_simple sentencias .  (7)
	programa : identificador_simple sentencias . BEGIN sentencias END  (12)
	sentencias : sentencias . sentencia  (13)

	error  shift 7
	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_TIPO  shift 8
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	FOR  shift 9
	SINGLE  shift 10
	ULONGINT  shift 11
	IF  shift 12
	BEGIN  shift 80
	END  shift 81
	OUTF  shift 13
	TYPEDEF  shift 14
	$end  reduce 7

	identificador_simple  goto 15
	sentencia  goto 61
	sentencia_declarativa  goto 18
	sentencia_ejecutable  goto 19
	tipo  goto 20
	lista_de_identificadores  goto 21
	funcion  goto 22
	struct  goto 23
	identificador  goto 24
	identificador_compuesto  goto 25
	encabezado_funcion  goto 26
	sentencia_asignacion  goto 27
	sentencia_salida  goto 28
	encabezado_for  goto 29
	sentencia_seleccion  goto 30
	sentencia_control  goto 31
	encabezado_for_obligatorio  goto 32


state 36
	sentencia : error PUNTO_Y_COMA .  (17)

	.  reduce 17


state 37
	encabezado_for_obligatorio : FOR PARENTESIS_L . asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA accion  (140)
	encabezado_for_obligatorio : FOR PARENTESIS_L . asignacion_enteros PUNTO_Y_COMA condicion PUNTO_Y_COMA  (142)
	encabezado_for_obligatorio : FOR PARENTESIS_L . asignacion_enteros condicion PUNTO_Y_COMA accion  (143)
	encabezado_for_obligatorio : FOR PARENTESIS_L . asignacion_enteros PUNTO_Y_COMA condicion accion  (144)

	IDENTIFICADOR_GENERICO  shift 1
	IDENTIFICADOR_ULONGINT  shift 2
	IDENTIFICADOR_SINGLE  shift 3
	.  error

	identificador_simple  goto 15
	identificador  goto 38
	identificador_compuesto  goto 25
	asignacion_enteros  goto 82

